--- a/BYSRapor1.Rmd
+++ b/BYSRapor1.Rmd
@@ -87,6 +87,47 @@ IMS'e veriyi ithal etmek için, öncelikle veri setinin CSV formatındaki dosyas
 
 IMS'ten veriyi R ile çekmek için, IMS'in sağladığı API'yi kullanabiliriz. API, IMS veritabanına erişim sağlamak ve belirli sorgularla veri almak için kullanılabilir. Bu API'yi kullanarak, R programı aracılığıyla IMS'den istenen verileri çekebilir ve analiz için kullanabiliriz. Bunun için R dilinde API çağrılarını kullanarak veriyi çekmek için bir kod oluşturabiliriz.
 
+## Q3 : İş  tanımı 
+
+Ramé Game , oyunculara eğlenceli ve bağımlılık yaratan oyunlar sunan bir yazılım şirketidir. Kuruluş amacı, eğlence dünyasına benzersiz deneyimler katmak ve oyuncuların memnuniyetini sağlamaktır. Şirketin ana faaliyetleri arasında mobil oyunlar, masaüstü oyunlar ve sanal gerçeklik deneyimleri geliştirmek bulunmaktadır.
+
+**Rutin Operasyonlar:**
+
+- Oyun geliştirme sürecini yönetme ve koordinasyon.
+
+- Oyuncu etkileşim verilerini toplama, analiz etme ve yorumlama.
+
+- Oyun performans verilerini izleme ve analiz etme.
+
+- Teknik verileri toplama ve sorunları tespit etme.
+
+- Pazarlama verilerini toplama, analiz etme ve pazarlama stratejilerini geliştirme.
+
+**Gelir Modeli:**Ramé Game 'in gelir modeli genellikle "freemium" modeline dayanır. Şirket, oyunları ücretsiz olarak sunar ve oyunculara oyun içi satın alma seçenekleri sunarak gelir elde eder. Ayrıca, reklam gelirleri ve lisans anlaşmaları da gelir kaynakları arasında yer alabilir.
+
+**Zorluklar:**
+
+- *Rekabet:* Oyun endüstrisinde rekabet yoğun olduğundan, yeni ve çekici oyunlar geliştirmek zor olabilir.
+
+- *Teknolojik Gelişmeler:* Oyun teknolojilerindeki hızlı değişimler, sürekli olarak güncel kalmayı ve rekabet edebilmeyi gerektirir.
+
+- *Pazarlama Maliyetleri:* Oyunların fark edilmesi ve oyunculara ulaşılması için yüksek pazarlama maliyetleri olabilir.
+
+**Avantajlar:**
+
+- *Yaratıcılık ve Esneklik:* Oyun geliştirme süreci yaratıcı ve esnek bir alan olduğundan, şirketin fikirlerini özgürce ifade etmesine ve yenilikçi oyunlar üretmesine olanak tanır.
+
+- *Küresel Erişim:* Mobil oyunlar ve internet aracılığıyla, şirketin oyunları dünya genelindeki oyunculara ulaşabilir.
+
+- *Oyuncu Bağlılığı:* Bağımlılık yaratan ve eğlenceli oyunlar geliştirmek, uzun vadeli oyuncu bağlılığı ve tekrarlayan gelir sağlayabilir.
+
+**Ramé Game 'in gerçek dünya rakipleri arasında şu şirketler yer alabilir:**
+
+- *Supercell: *Dünya çapında popüler oyunlar geliştiren bir mobil oyun şirketi. Avantajları arasında büyük oyuncu kitlesi ve güçlü marka bilinirliği bulunur.
+
+- *Zynga:* Sosyal ve mobil oyunlar geliştiren bir şirket. Avantajları arasında geniş oyun portföyü ve güçlü dağıtım kanalları bulunur.
+
+- *Epic Games:* Bilgisayar ve konsol oyunları geliştiren bir şirket. Avantajları arasında güçlü teknoloji altyapısı ve büyük ölçekli oyun projeleri bulunur.
 
 
 
