--- a/BYSRapor1.Rmd
+++ b/BYSRapor1.Rmd
@@ -7,39 +7,50 @@ date: "2024-04-30"
 
 ## Q1 : IMS platformunun belirlenmesi
 
-**Platformun İsmi:** Salesforce
+**Platformun İsmi:** SuiteCRM
 
-**Lisansı:** Salesforce'un lisans modelleri çeşitli özelliklere, kullanıcı sayısına ve işletmenin ihtiyaçlarına göre farklılık gösterir. Temel lisans türleri Sales Cloud, Service Cloud, Marketing Cloud, Commerce Cloud ve daha birçok özel işlevsellik sunan lisanslar içerir.
+**Lisansı:** AGPLv3 (Affero General Public License version 3)
 
-**Kısa Tarihçesi: **Salesforce, 1999 yılında Marc Benioff ve Parker Harris tarafından kuruldu. İlk olarak bulut tabanlı CRM hizmeti sunan şirket, o zamandan beri büyüyerek dünyanın önde gelen CRM sağlayıcılarından biri haline geldi. Günümüzde, Salesforce birçok farklı endüstride ve işletme boyutunda milyonlarca müşteriye hizmet vermektedir.
+**Kısa Tarihçesi:** SuiteCRM, SugarCRM'in açık kaynaklı bir türevidir. SugarCRM'in son açık kaynaklı sürümü olan SugarCRM Community Edition, SuiteCRM'in temelini oluşturmuştur. SuiteCRM projesi, SugarCRM Community Edition'ın sonlandırılmasının ardından başlatılmıştır. 2013 yılında başlatılan SuiteCRM projesi, açık kaynaklı bir topluluk tarafından geliştirilmektedir..
 
 **Platformun Kullanıcıya Sunduğu Özellikler:**
 
-- Müşteri ilişkilerini yönetme (müşteri bilgileri, iletişim geçmişi, satış fırsatları vb.).
+- Müşteri ilişkileri yönetimi (CRM)
 
-- Satış yönetimi (satış fırsatları izleme, teklifler oluşturma, satış hunisi yönetimi vb.).
+- Satış yönetimi
 
-- Pazarlama otomasyonu (pazarlama kampanyaları oluşturma, e-posta pazarlama, sosyal medya yönetimi vb.).
+- Pazarlama otomasyonu
 
-- Müşteri desteği ve hizmet yönetimi (müşteri taleplerini izleme, sorunları çözme, destek süreçlerini otomatikleştirme vb.).
+- Müşteri destek yönetimi
 
-- Analitik ve raporlama (veri analizi, performans raporları oluşturma, tahminler yapma vb.)
+- Fırsat yönetimi
 
-**Platformun Kullandığı Yazılım,** Veritabanı ve Diğer Teknolojiler: Salesforce, bulut tabanlı bir platform olduğu için Salesforce Platform'u (eski adıyla Force.com) üzerinde çalışır. Veritabanı olarak çoklu kiracılık prensibiyle çalışan ve ölçeklenebilirlik sağlayan Oracle veritabanını kullanır. Ayrıca, Salesforce'un birçok farklı yazılım geliştirme dili ve teknolojisiyle entegre olabilme yeteneği bulunur.
+- Kampanya yönetimi
 
-Salesforce, REST API ve SOAP API gibi farklı API'lar sunar. Bu API'lar aracılığıyla platforma entegrasyon yapılabilir, veri alışverişi sağlanabilir, özel uygulamalar geliştirilebilir ve iş süreçleri otomatikleştirilebilir. Özellikle Salesforce'un REST API'si, kolay kullanımı ve geniş yetenekleriyle dikkat çeker.
+- Raporlama ve analiz
 
-**IMS Kategorisi / Platform Seçiminizde Rol Oynayan Sebepler:**
+**Kullanılan Yazılım, Veritabanı ve Diğer Teknolojiler:**
 
-- **Özel İlgi Alanları:** Müşteri ilişkileri yönetimi ve satış/pazarlama süreçlerine odaklanmış işletmeler için Salesforce, geniş özellik yelpazesiyle öne çıkar. Özellikle büyük ölçekli işletmeler için ölçeklenebilirlik ve geniş entegrasyon seçenekleri önemlidir.
+- PHP (Programlama Dili)
 
-- **Daha Önceki Deneyimler:** Salesforce, geniş kullanıcı tabanına sahip olduğu için birçok kişinin daha önce deneyimlemiş olma olasılığı yüksektir. Bu da eğitim ve benimseme süreçlerini kolaylaştırır.
+- MySQL veya MariaDB (Veritabanı)
 
-- **Sektör Hacmi ve Popülerliği:** Salesforce, dünya genelinde birçok farklı endüstride yaygın olarak kullanılan lider bir CRM platformudur. Bu da sağladığı çözümlerin güvenilirliğini ve etkinliğini destekler.
+- Apache veya Nginx (Web Sunucusu)
 
-- **Entegrasyon Yetenekleri:** Salesforce, birçok farklı yazılım ve hizmetle entegre olabilme yeteneğiyle öne çıkar. İşletmelerin mevcut sistemleriyle sorunsuz bir şekilde entegre olabilmesi, verimliliği artırabilir ve veri bütünlüğünü sağlayabilir.
+- JavaScript, HTML, CSS (Frontend Teknolojileri)
 
-Bu faktörler göz önüne alındığında, Salesforce'un geniş özellik yelpazesi, ölçeklenebilirlik ve entegrasyon yetenekleri, bir IMS kategorisi/CRM platformu seçiminde önemli rol oynayabilir.
+**Platformun API Özellikleri:**
+
+SuiteCRM, RESTful API aracılığıyla entegrasyonlar yapılmasına olanak tanır. API, SuiteCRM verilerine erişim ve veri manipülasyonu için kullanılabilir. Özellikler arasında veri okuma, yazma, güncelleme ve silme bulunur.
+
+**Seçimin Nedenleri:**
+
+- Özel İlgi Alanları: Müşteri ilişkileri yönetimi ve açık kaynaklı yazılım projeleri benim ilgi alanlarımdan biridir. SuiteCRM, bu iki alanda bir araya gelerek ilgimi çeken bir platformdur.
+
+- Sektör Hacmi ve Popülerlik: SuiteCRM, dünya çapında birçok işletme ve kuruluş tarafından kullanılmaktadır. Bu, platformun güvenilirliğini ve kullanıcı tabanının genişliğini gösterir.
+
+- SuiteCRM'in Docker ile kurulabilirliği:  hızlı bir şekilde geliştirme ve test ortamları oluşturmayı kolaylaştırır. Docker, SuiteCRM'i hızlı bir şekilde dağıtıp kullanmamı sağlayacak esnek bir altyapı sunar. Bu da benim seçimimi daha da destekler.
+
 
 ## Q2 : Dataset tanımı
 
